--- a/install/psolar_localization/share/psolar_localization/config/local_ekf_params.yaml
+++ b/install/psolar_localization/share/psolar_localization/config/local_ekf_params.yaml
@@ -1,7 +1,7 @@
 ekf_filter_node_odom:
   ros__parameters:
     frequency: 30.0
-    two_d_mode: true # Recommended to use 2d mode for nav2 in mostly planar environments
+    two_d_mode: false # Recommended to use 2d mode for nav2 in mostly planar environments
     print_diagnostics: true
     debug: false
     publish_tf: true
@@ -21,11 +21,11 @@ ekf_filter_node_odom:
     odom0_differential: false
     odom0_relative: false
 
-    imu0: imu
+    imu0: imu/corrected
     imu0_config: [false, false, false,
-                  false,  false,  true,
+                  true,  true,  true,
                   false, false, false,
-                  false,  false,  false,
+                  true,  true,  true,
                   false,  false,  false]
     imu0_differential: false  # If using a real robot you might want to set this to true, since usually absolute measurements from real imu's are not very accurate
     imu0_relative: false
@@ -49,4 +49,5 @@ ekf_filter_node_odom:
                               0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,     0.0,     0.0,    0.0,    0.0,    0.0,    0.3,   0.0,    0.0,
                               0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,     0.0,     0.0,    0.0,    0.0,    0.0,    0.0,    0.3,   0.0,
                               0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,     0.0,     0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.3]
+
 
