--- a/src/psolar_localization/CMakeLists.txt
+++ b/src/psolar_localization/CMakeLists.txt
@@ -13,6 +13,8 @@ find_package(tf2_ros REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
 
 include_directories(include)
 
@@ -24,6 +26,12 @@ ament_target_dependencies(gps_tilted_publisher
   tf2
   tf2_ros
   tf2_geometry_msgs
+  sensor_msgs
+)
+add_executable(imu_frame_correction src/imu_frame_correction.cpp)
+ament_target_dependencies(imu_frame_correction
+  rclcpp
+  sensor_msgs
 )
 add_executable(odom_tilted_publisher src/odom_tilted_publisher.cpp)
 ament_target_dependencies(odom_tilted_publisher
@@ -46,6 +54,7 @@ install(TARGETS
   gps_tilted_publisher
   odom_tilted_publisher
   tilted_frames_publisher
+  imu_frame_correction
   DESTINATION lib/${PROJECT_NAME}
 )
 
