--- a/src/psolar_localization/config/local_ekf_params_slope.yaml
+++ b/src/psolar_localization/config/local_ekf_params_slope.yaml
@@ -8,7 +8,7 @@ ekf_filter_node_odom:
 #If you are only fusing continuous position data such as wheel encoder odometry, visual odometry, or IMU data, set world_frame to your odom_frame value.
     map_frame: map_tilted
     odom_frame: odom_tilted
-    base_link_frame: base_footprint # the frame id used by the turtlebot's diff drive plugin
+    base_link_frame: base_footprint_tilted # the frame id used by the turtlebot's diff drive plugin
     world_frame:  odom_tilted
 
     odom0: odom_tilted
