--- a/src/psolar_localization/config/navsat_params.yaml
+++ b/src/psolar_localization/config/navsat_params.yaml
@@ -6,7 +6,7 @@ navsat_transform:
    magnetic_declination_radians: 0.0
    yaw_offset: 0.0
    #Although I will be climbing a tilted surface to compute the distance I only need x, y and z
-   zero_altitude: true
+   zero_altitude: false
    broadcast_utm_transform: true
    publish_filtered_gps: true
    use_odometry_yaw: true
