--- a/src/psolar_bringup/CMakeLists.txt
+++ b/src/psolar_bringup/CMakeLists.txt
@@ -8,10 +8,18 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(nav2_bringup REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
+ament_python_install_package(${PROJECT_NAME})
 
 install(DIRECTORY launch rviz 
   DESTINATION share/${PROJECT_NAME}/
+)
+
+install(PROGRAMS
+  ${PROJECT_NAME}/battery_simulation.py
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
