--- a/src/psolar_navigation/config/nav_params.yaml
+++ b/src/psolar_navigation/config/nav_params.yaml
@@ -150,6 +150,7 @@ controller_server:
         max_angle_to_furthest: 1.0
         mode: 0
 
+
 # GPS WPF CHANGE: Remove static layer
 local_costmap:
   local_costmap:
@@ -159,24 +160,15 @@ local_costmap:
       global_frame: map
       robot_base_frame: base_link
       rolling_window: true
+      track_unknown_space: false
       width: 3
       height: 3
       resolution: 0.05
       robot_radius: 0.22
-      plugins: ["voxel_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
+      plugins: ["obstacle_layer"]
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
         observation_sources: scan
         scan:
           topic: /scan/data
@@ -188,6 +180,8 @@ local_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
+          # outdoors there will probably be more inf points
+          inf_is_valid: true
       always_send_full_costmap: True
 
 # GPS WPF CHANGE: Remove static layer
@@ -264,6 +258,11 @@ smoother_server:
       tolerance: 1.0e-10
       max_its: 1000
       do_refinement: True
+
+map_server:
+  ros__parameters:
+    yaml_filename: "maps/cleaning_5x5.yaml"
+
 
 behavior_server:
   ros__parameters:
